2048-game/manifest_yamls/ingress-game-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048-service
  namespace: #namespace#
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: game-2048
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  namespace: #namespace#
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
        - name: backend
          image: alexwhen/docker-2048
          ports:
            - name: http
              containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-2048-ingress
  namespace: #namespace#
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: game-2048-service
                port:
                  number: 80
            path: /2048(/|$)(.*)
            pathType: ImplementationSpecific
---
apiVersion: v1
kind: Pod
metadata:
  name: net-pod-3
  labels:
    purpose: demonstrate-networking
  namespace: #namespace#
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["/bin/sleep", "3650d"]
    securityContext:
      runAsUser: 0  # Run as root user
    args: []
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh", "-c", "apt-get update && apt-get install -y net-tools nano iputils-ping dnsutils curl"]
